v1.8.0
improved run as localsystem feature

v1.7.4
added software licensing cache view (extras)
resolve apisets while viewing shadow table in Windows 10 20H1 >= 18890 builds
fix displaying sid user/domain information for private namespaces
added refresh (f5) for private namespace dialog

v1.7.3
threads list in processes dialog
view file properties for KisServiceTable/W32pServiceTable dialogs
process/thread/token object properties dialogs
bugfixes

v1.7.2
symbolic link object dump
internal fixes after profiling
support for 19H1 SeCiCallbacks scan
added and updated more object type descriptions

v1.7.1
SeCiCallbacks/g_CiCallbacks, DbgkLmdCallbacks added to the callbacks viewer
Session object view and access rights, merge pull request #8 #9
fixed regression added in 1.7.0
treelist updated

v1.7.0
code can now be compiled as C++
added W32pServiceTable view
added process list dialog (extras)
added Callback object type callbacks list (Properties->Object)
added callbacks viewer for certain callback types (registry, ps, ob, kebugcheck, se, dbg, po, io etc)
reimplemented "type" object type view (added missing fields from w10+)
reimplemented service tables extraction code

v1.6.0
ported to msvc 2017 (with backward compatibility to 2015)
reimplemented private namespaces lookup
object directory dump reflect Win10 changes
added alpc port dump and additional dialog
treelist control updated
private namespaces dialog updated
usershareddata dialog updated
internal rearrange
merge pull request #7, fix Job object process list display
multiple Wine Staging fixes
rtls updated 

v1.5.5
tweaked PTL display

v1.5.4
added display of Process Trust Label for Directory object type

v1.5.3
OpenWindowStation fix

v1.5.2
internal rearrange

v1.5.1
bugfixes

v1.5.0
added Partition, DxgkCurrentDxgProcessObject objects description
added mailslots viewer dialog
added file properties for drivers (menu -> extras -> Drivers)
added FltConnectionPort object dump
switched to hde instead of ldasm