@@ -5,11 +5,11 @@ VisualStudioVersion = 15.0.28307.645
 MinimumVisualStudioVersion = 10.0.40219.1
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "WinObjEx64", "WinObjEx64\WinObjEx64.vcxproj", "{A68B0947-9415-4ACA-BC0A-8558A4F4FBE3}"
 EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "TestPlugin", "Plugins\TestPlugin\TestPlugin.vcxproj", "{7C10DDD2-E88A-4133-B140-80679BE8AFDD}"
-EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Plugins", "Plugins", "{7C26FBEB-7B9D-4C48-8C27-E5563113C4D5}"
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "Sonar", "Plugins\Sonar\Sonar.vcxproj", "{91A5250B-99D2-48F9-B649-82D66C9A6396}"
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "ExamplePlugin", "Plugins\ExamplePlugin\ExamplePlugin.vcxproj", "{7C10DDD2-E88A-4133-B140-80679BE8AFDD}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -40,24 +40,6 @@ Global
 		{A68B0947-9415-4ACA-BC0A-8558A4F4FBE3}.ReleaseSignedWithDriver|x64.ActiveCfg = ReleaseSignedWithDriver|x64
 		{A68B0947-9415-4ACA-BC0A-8558A4F4FBE3}.ReleaseSignedWithDriver|x64.Build.0 = ReleaseSignedWithDriver|x64
 		{A68B0947-9415-4ACA-BC0A-8558A4F4FBE3}.ReleaseSignedWithDriver|x86.ActiveCfg = ReleaseSignedWithDriver|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.Debug|x64.ActiveCfg = Debug|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.Debug|x64.Build.0 = Debug|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.Debug|x86.ActiveCfg = Debug|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.Release|x64.ActiveCfg = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.Release|x64.Build.0 = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.Release|x86.ActiveCfg = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseNotSignedWithDriver|x64.ActiveCfg = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseNotSignedWithDriver|x64.Build.0 = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseNotSignedWithDriver|x86.ActiveCfg = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseNotSignedWithDriver|x86.Build.0 = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSigned|x64.ActiveCfg = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSigned|x64.Build.0 = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSigned|x86.ActiveCfg = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSigned|x86.Build.0 = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSignedWithDriver|x64.ActiveCfg = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSignedWithDriver|x64.Build.0 = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSignedWithDriver|x86.ActiveCfg = Release|x64
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSignedWithDriver|x86.Build.0 = Release|x64
 		{91A5250B-99D2-48F9-B649-82D66C9A6396}.Debug|x64.ActiveCfg = Debug|x64
 		{91A5250B-99D2-48F9-B649-82D66C9A6396}.Debug|x64.Build.0 = Debug|x64
 		{91A5250B-99D2-48F9-B649-82D66C9A6396}.Debug|x86.ActiveCfg = Debug|x64
@@ -76,13 +58,31 @@ Global
 		{91A5250B-99D2-48F9-B649-82D66C9A6396}.ReleaseSignedWithDriver|x64.Build.0 = Release|x64
 		{91A5250B-99D2-48F9-B649-82D66C9A6396}.ReleaseSignedWithDriver|x86.ActiveCfg = Release|x64
 		{91A5250B-99D2-48F9-B649-82D66C9A6396}.ReleaseSignedWithDriver|x86.Build.0 = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.Debug|x64.ActiveCfg = Debug|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.Debug|x64.Build.0 = Debug|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.Debug|x86.ActiveCfg = Debug|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.Release|x64.ActiveCfg = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.Release|x64.Build.0 = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.Release|x86.ActiveCfg = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseNotSignedWithDriver|x64.ActiveCfg = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseNotSignedWithDriver|x64.Build.0 = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseNotSignedWithDriver|x86.ActiveCfg = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseNotSignedWithDriver|x86.Build.0 = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSigned|x64.ActiveCfg = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSigned|x64.Build.0 = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSigned|x86.ActiveCfg = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSigned|x86.Build.0 = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSignedWithDriver|x64.ActiveCfg = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSignedWithDriver|x64.Build.0 = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSignedWithDriver|x86.ActiveCfg = Release|x64
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD}.ReleaseSignedWithDriver|x86.Build.0 = Release|x64
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
 	EndGlobalSection
 	GlobalSection(NestedProjects) = preSolution
-		{7C10DDD2-E88A-4133-B140-80679BE8AFDD} = {7C26FBEB-7B9D-4C48-8C27-E5563113C4D5}
 		{91A5250B-99D2-48F9-B649-82D66C9A6396} = {7C26FBEB-7B9D-4C48-8C27-E5563113C4D5}
+		{7C10DDD2-E88A-4133-B140-80679BE8AFDD} = {7C26FBEB-7B9D-4C48-8C27-E5563113C4D5}
 	EndGlobalSection
 	GlobalSection(ExtensibilityGlobals) = postSolution
 		SolutionGuid = {4FAAD6B8-C83A-4862-BD27-9C4030CBA89C}
