@@ -67,6 +67,14 @@ typedef INT(*pfnuiGetMaxCompareTwoFixedStrings)(
     _In_ LPARAM lParamSort,
     _In_ BOOL Inverse);
 
+typedef VOID(*pfnuiCopyTreeListSubItemValue)(
+    _In_ HWND TreeList,
+    _In_ UINT ValueIndex);
+
+typedef VOID(*pfnuiCopyListViewSubItemValue)(
+    _In_ HWND ListView,
+    _In_ UINT ValueIndex);
+
 typedef struct _WINOBJEX_PARAM_BLOCK {
     HWND ParentWindow;
     HINSTANCE hInstance;
@@ -84,6 +92,8 @@ typedef struct _WINOBJEX_PARAM_BLOCK {
     //ui
     pfnuiGetMaxOfTwoU64FromHex uiGetMaxOfTwoU64FromHex;
     pfnuiGetMaxCompareTwoFixedStrings uiGetMaxCompareTwoFixedStrings;
+    pfnuiCopyTreeListSubItemValue uiCopyTreeListSubItemValue;
+    pfnuiCopyListViewSubItemValue uiCopyListViewSubItemValue;
 
 } WINOBJEX_PARAM_BLOCK, *PWINOBJEX_PARAM_BLOCK;
 
