@@ -21,34 +21,34 @@ cb66fca90766db12474ce057436364dabaf3e948f6ffa7e9651f869656f0b33c *Screenshots\Vi
 ef65a909e8d9bc7ec94ecbc0f465f24a7968d6675eadf7f25f6414c66d6b28be *Screenshots\ViewingTypeInformation.png
 db0ab26d20a62ba7c9c844e916e88168b72a7e52932d3483eb2d0a2e535b75a8 *Screenshots\ViewingUserSharedData.png
 9e2b64f390c609172c5791dd138a748d31bf4d2cc839f01dbd514afe1cdfd083 *Screenshots\W32pServiceTableView.png
-39747979c79a8130d8e3fa819b2b77b64c709b0cbfbebb60b74d861b666f9e0c *Source\CHANGELOG.txt
+5f94600f2fc55677eb49693a4e8ec9eb8ffd6817697d3e36eff4a52202913e39 *Source\CHANGELOG.txt
 b67ee532569e3a39d0f02b77c56698d13db20c50206b620ccfbd6546e5cb0777 *Source\FileList.txt
 55eed414926c47b0bfc5000eeabb882d77d78e17b5be94ca229e681f009b0740 *Source\TypesWithNoDesc.txt
-d63474bb452be8c27c63ff83bace34924f5ce1d8a3fdb9e796160a2f9993f3e5 *Source\WinObjEx64.sln
+a781069882aa90d77ce01522fe5991df8edf7cbbc4c097e7429fdd2824bd0ee1 *Source\WinObjEx64.sln
 39a976ac4e1b76c2058815c5017bd3acceb69950286cfdf8c5704b7e31b8cca0 *Source\drvstore\kldbgdrv.sys
+7d3d54040c3d69ea1d980f40473f4abd7210c44bf7eb100579b28e92020b567c *Source\Plugins\ExamplePlugin\ExamplePlugin.vcxproj
+62bd37b016bd027075f792aacdc9dbf2256f7a35079a642ef73d2cc044e5f755 *Source\Plugins\ExamplePlugin\ExamplePlugin.vcxproj.filters
+e953b026d0f383188c753487df0a4d879fa5da5ba82ac979aa877db84e89a060 *Source\Plugins\ExamplePlugin\ExamplePlugin.vcxproj.user
+6b2236b93693d4830feb90ee504ae03555d4882d4c301bea55f7980973b5fb32 *Source\Plugins\ExamplePlugin\export.def
+24f842ff3f8ab162e50bc37bfd40135a4e31e15acee1342d9447ce4ad7fb1f54 *Source\Plugins\ExamplePlugin\main.c
+ac6b5b0880e8f263f50c35501e554ba0cc7824075f5dffc208931e4f3cf3e311 *Source\Plugins\ExamplePlugin\plugin_def.h
+6b95cd81ca4f309ac9f243ae73d2e8099634aaffead5b7b214bfcd14b6d604f6 *Source\Plugins\ExamplePlugin\resource.h
+85853a8c3ae3a04df575c8bb83146d309504c61351ef74d43f7a96665fbbd6bb *Source\Plugins\ExamplePlugin\Resource.rc
 6b2236b93693d4830feb90ee504ae03555d4882d4c301bea55f7980973b5fb32 *Source\Plugins\Sonar\export.def
 90e1ccc5492e110b6dfc4b08761ecdf547db2691d5981347c3db5220f9e61fc5 *Source\Plugins\Sonar\global.h
-f529b874cfe7dfe1c33ffcc6864b186633135922056997cb0a92ea01fbaadb9f *Source\Plugins\Sonar\main.c
+513fd9f0e30d21fddcce792c9053759e6ca03cb62c5d9dbb276b529ad82440c0 *Source\Plugins\Sonar\main.c
 f46dd90591959a4b7805ed308c187432fd7089848998ca1960521b666a0f85a9 *Source\Plugins\Sonar\ndis.h
-560c6462d0bd78964b6c2adaced0555949db45b51f0f04684a145e43401e4006 *Source\Plugins\Sonar\plugin_def.h
-ef265dafe37101f35b9a69ada3786023a1433ee1704b30e1dc8a32c98b773771 *Source\Plugins\Sonar\query.c
-1efc1809ba5c858f3fe2b3cbd41e40f80710c47131992d704c0096032f2e4317 *Source\Plugins\Sonar\query.h
+4caed309cc47635d5911b45f357cf28a74945d387dd64535a79b161f73080af7 *Source\Plugins\Sonar\plugin_def.h
+61ffdb17d3d826199fe8e25c0326a6d6ebb82454511cceca68d27d3ea394410e *Source\Plugins\Sonar\query.c
+d16d09830b278575a1782ae17bb51526d93999f3c3d1eda4b86683d378068f29 *Source\Plugins\Sonar\query.h
 2dd7ddd6ef884105c18d761e7707428c66700382f70d90798ac81abac7275c86 *Source\Plugins\Sonar\resource.h
 9b82361dc83f985fb54a2168347ed597977c7a4c66c83307f0ac01cba792ad1c *Source\Plugins\Sonar\Resource.rc
-e0dd7b5b3e3787c6991c945e89ec7c76d1c16b3703bcfc8a525501724fb421fe *Source\Plugins\Sonar\Sonar.vcxproj
+304c22f1a158d4816a992c6d5be0677ce12b783fcebbd8e4ee979d66c3e234e3 *Source\Plugins\Sonar\Sonar.vcxproj
 baa581ab84ee224f078e171534ffad9c4df1d7ad3b0a72a498ee6299fcb77ebd *Source\Plugins\Sonar\Sonar.vcxproj.filters
 e953b026d0f383188c753487df0a4d879fa5da5ba82ac979aa877db84e89a060 *Source\Plugins\Sonar\Sonar.vcxproj.user
-fe306ddd9301b55d9c247e502931f949acd5a801d7884949d4447a76cd14d85c *Source\Plugins\Sonar\ui.h
+5189b48f4369a7073fc4c50514b06182613736f978aa81927d56f3ea3a1fc0c4 *Source\Plugins\Sonar\ui.h
 38d5b754af9e2dfcbe2161e6369651ff86c24ef223023225bc489de04232072e *Source\Plugins\Sonar\rsrc\6001.ico
 15334c419dee330554a8549920b9241d865590cc7641722f7d31f8f612256d86 *Source\Plugins\Sonar\rsrc\6002.ico
-6b2236b93693d4830feb90ee504ae03555d4882d4c301bea55f7980973b5fb32 *Source\Plugins\TestPlugin\export.def
-38721dcef69188ee5f9f46c9674d3fbd9cb046ba83099f79cb331399c3ca6446 *Source\Plugins\TestPlugin\main.c
-b88d54d7f8d32c18b42b35da68c1b4df0472aba9a16b9be8237f156dc9239c91 *Source\Plugins\TestPlugin\plugin_def.h
-6b95cd81ca4f309ac9f243ae73d2e8099634aaffead5b7b214bfcd14b6d604f6 *Source\Plugins\TestPlugin\resource.h
-7c81dcd9d93c452fcbaaa85cf2116ec9f2577a69bd653ddceef64a5b2935fdf5 *Source\Plugins\TestPlugin\Resource.rc
-dbd574a40c0b7d7709b92142ce74c54337529d073bee444b499de5546f9faddf *Source\Plugins\TestPlugin\TestPlugin.vcxproj
-62bd37b016bd027075f792aacdc9dbf2256f7a35079a642ef73d2cc044e5f755 *Source\Plugins\TestPlugin\TestPlugin.vcxproj.filters
-e953b026d0f383188c753487df0a4d879fa5da5ba82ac979aa877db84e89a060 *Source\Plugins\TestPlugin\TestPlugin.vcxproj.user
 2fd9f5f68cbe976ea36b975a5e55fc8be2046b05e1e33adcf6a98eea9b5b1637 *Source\WinObjEx64\aboutDlg.c
 dc5ad976533a91292022a15f741a95d04663849c34fced1432a830726341d51d *Source\WinObjEx64\aboutDlg.h
 4ec2d4d3e73a5472aa235fe7032d5e5e04065ff87d9d8c2fe9df81b9815feb55 *Source\WinObjEx64\driver.rc
@@ -71,8 +71,8 @@ d8bf76d9d920f6ae72379ce7823d1dd7e0696af2cb238da84b5543eff9ab188a *Source\WinObjE
 5d2b9be96b42044e0f09a6a901c194934a1dc2d2e7cf14d65e6414b22ec89765 *Source\WinObjEx64\msvcver.h
 113f65321f288dc8800af816e568c72f108d41579a500802549b95c8d23a6f6d *Source\WinObjEx64\objects.c
 82c8fcbfddc43873aaf702ec7a140ad46b1708eb9d0c5d32ee190482dc851124 *Source\WinObjEx64\objects.h
-a532765592e51322c8665f01bd6d43bf3db99257a2d44fc3b132a331362f2a28 *Source\WinObjEx64\plugmngr.c
-78b180b273578cb067a8368b39c7d7ca4795ad108e06a0de8a0434d4ac958d54 *Source\WinObjEx64\plugmngr.h
+ac8c6aaa9e467a9b02be0a89b4f582b5bb671194a34618d61572ced440b48438 *Source\WinObjEx64\plugmngr.c
+807446ec38cc5d2e94903797d2815993807df4bf8eb447c8d6c4000674f9cd3a *Source\WinObjEx64\plugmngr.h
 f8f2f5a4591ea36dde3214e5d1f9b91dffa1fde6ea419099547c26fbd6554c4f *Source\WinObjEx64\resource.h
 7d7caed0eaa1283562a62ee448a61ef2286ac99c24fef26b5a3cc1a8331c7ce1 *Source\WinObjEx64\Resource.rc
 19562a7b7a1f03cfe35bfcbb3bad0b658e9162e4b6b77a2dad72aca56f528b3a *Source\WinObjEx64\sup.c
